--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ a {
 
 .select.select--open .select__input {
   border-bottom: 1px solid transparent;
+  border-radius: 5px 5px 0 0;
 }
 
 .select__overlay {
@@ -114,8 +115,7 @@ a {
   display: none;
   max-height: 196px;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 0 0 5px 5px;
   overflow-y: auto;
 }
 
